0022921: Adding macros for convenient inclusion of run-time asserts